--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     api 'com.google.android.gms:play-services-ads:' + rootProject.ext.gmsPlayAdsVersion
+    implementation 'com.google.android.gms:play-services-ads-identifier:' + rootProject.ext.gmsPlayAdsVersion
 
     implementation 'com.facebook.android:audience-network-sdk:5.6.0'
     implementation('com.mopub.mediation:facebookaudiencenetwork:5.6.0.1') {
@@ -56,7 +57,10 @@ dependencies {
         exclude module: 'moat-mobile-app-kit' // To exclude Moat
     }
 
-    implementation 'com.inmobi.monetization:inmobi-ads:7.2.2'
-    //required by inmobi
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.inmobi.monetization:inmobi-ads:9.0.1'
+ // implementation 'com.inmobi.monetization:inmobi-ads:9.0.2' // why not working?
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+//    implementation 'com.inmobi.monetization:inmobi-ads:7.2.2'
+//    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
